# KRISHISETU

./: .dockerignore  .gitignore  AI_CropDoctor_Model_Integration.txt  AI_Crops_Doctor_Documentation.txt  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  START_KRISHISETU.bat  app.py  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  telemetry.json
Dummy/client/: package-lock.json  package.json
Dummy/client/public/: index.html
Dummy/client/src/: App.css  App.js  index.css
Dummy/server/: server.js
INTEGRATION_STAGING/Model/: Crop_Model.pt
INTEGRATION_STAGING/backend/routes/: cropDoctor.js
LokSevaAI/LandingPage/: index.html  package-lock.json  package.json  script.js  style.css
LokSevaAI/data collection/: index.html  package-lock.json
LokSevaAI/data collection/src/: main.js
LokSevaAI_MERN/: Creds.txt  README.md
LokSevaAI_MERN/backend/: .env.example  generate_dummy_pdf.js  package-lock.json  package.json  server.js  test_firecrawl.js  twilioservice.js
LokSevaAI_MERN/backend/models/: News.js  Product.js  Scheme.js  notifications.js  schemes.js  users.js
LokSevaAI_MERN/backend/routes/: cropDoctor.js  firecrawl.js  marketplace.js  msp.js  ocr.js  schemes.js  smsWebhooks.js  users.js  whatsappRoutes.js
LokSevaAI_MERN/backend/services/: cronService.js  crop_model_inference.py  firecrawlService.js  geminiService.js  ocr_script.py  twilioservice.js
LokSevaAI_MERN/frontend/: .env.example  package-lock.json  package.json  test_overrides.js  test_vapi.js
LokSevaAI_MERN/frontend/src/: App.css  (+5 more)
local/: index.html
(+23 files in other folders)
