[project]
name = "chakravyuh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=0.4.24",
    "firecrawl-py>=0.0.16",
    "google-generativeai>=0.5.0",
    "ipykernel>=7.2.0",
    "langchain>=0.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=1.0.0",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.10",
    "langgraph>=0.1.0",
    "numpy>=1.24.0",
    "openai-whisper>=20231117",
    "pandas>=2.0.0",
    "pydeck>=0.8.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scipy>=1.11.0",
    "sentence-transformers>=2.7.0",
    "sounddevice>=0.4.6",
    "streamlit>=1.32.0",
]
